fix: canvas going out of the viewport width

--- a/src/chrome/styles.css
+++ b/src/chrome/styles.css
@@ -3,9 +3,8 @@
   top: 20px;
   right: 20px;
   z-index: 9999;
-  border: 1px solid black;
   border-radius: 1rem;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.5);
   font-family: Arial, sans-serif;
   cursor: move;
   height: 62px;
